--- a/_data/nav-footer.yml
+++ b/_data/nav-footer.yml
@@ -4,5 +4,5 @@
 - contact.md
 - links:
     - facebook: https://www.facebook.com/monocollection
-    - instagram: https://www.instagram.com/monocollection_official
+    - instagram: https://www.instagram.com/monocollection
     - changeungbok.com: https://changeungbok.com/
