개발 환경 설정을 추가하고 팝업을 내립니다. applications > 원단들 > 커튼 사진을 추가합니다.

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,12 @@ repository: "monocollection/monocollection"
 
 # Build settings
 plugins: ["jekyll-sitemap", "jekyll-redirect-from"]
-exclude: ["Gemfile", "Gemfile.lock", "node_modules", "update_bootstrap.sh", "package-lock.json", "LICENSE.md", "README.md"]
+exclude: [
+  "Gemfile", "Gemfile.lock",
+  "node_modules", "package-lock.json",
+  "LICENSE.md", "README.md",
+  "update_bootstrap.sh", "slugify_files.py"
+]
 
 kramdown:
   input: GFM
