페이스북 주소를 업데이트합니다.

--- a/_data/nav-footer.yml
+++ b/_data/nav-footer.yml
@@ -3,6 +3,6 @@
 - press.html
 - contact.md
 - links:
-    - facebook: https://www.facebook.com/monocollection
+    - facebook: https://www.facebook.com/monocollection-101768972419389/
     - instagram: https://www.instagram.com/monocollection
     - changeungbok.com: https://changeungbok.com/
